<resources>
    <string name="app_name">local-attendance_app</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiY2hlc3Nwb3JnIiwiYSI6ImNrdGw3c2g0NzFpMWoyd282ZjhyNGpyOTcifQ.nCfPNq04dgxyscrdR7TR6Q</string>
    <string name="full_name">Full Name</string>
    <string name="address_mail">address@mail.com</string>
    <string name="name_month">Name_Month</string>
    <string name="dummy_day_date">xx</string>
    <string name="dummy_month_date">xxx</string>
    <string name="start">Start</string>
    <string name="wib">-- : -- WIB</string>
    <string name="end">End</string>
    <string name="total">Total</string>
    <string name="total_hour">-- : --</string>
    <string name="start_working_to_check_in">Start working to check in</string>
    <string name="finish_working_to_check_out">Finish working to check out</string>
    <string name="working_location">Working Location</string>
    <string name="latitude_s_longitude_s">Latitude: %1$s || Longitude: %2$s</string>
    <string name="telkom_university_jl_telekomunikasi_no_1_terusan_buahbatu_bojongsoang_sukapura_kec_dayeuhkolot_bandung_jawa_barat_40257">Telkom University, Jl. Telekomunikasi No. 1,Terusan Buahbatu - Bojongsoang, Sukapura, Kec. Dayeuhkolot, Bandung, Jawa Barat 40257</string>
    <string name="start_working">Start Working</string>
    <string name="finish_working">Finish Working</string>
    <string name="finish">Finish</string>
    <string name="starting_location">Starting Location</string>
    <string name="location_used_to_start_working">Location Used To Start Working</string>
    <string name="submit_location">Submit Location</string>
    <string name="change">Change</string>
    <string name="none">None</string>

    <string name="user_data">PREFERENCE_USER_TOKEN</string>
    <string name="user_today_attendance">TODAY_ATTENDANCE_TOKEN</string>
    <string name="user_today_checkin">TODAY_CHECK_IN_TOKEN</string>
    <string name="user_today_checkout">TODAY_CHECK_OUT_TOKEN</string>
    <string name="user_work_place_latitude">WORK_PLACE_LATITUDE</string>
    <string name="user_work_place_longitude">WORK_PLACE_LONGITUDE</string>
    <string name="user_work_place_name">WORK_PLACE_NAME</string>
    <string name="good_job_for_today">Good job for today, Have a rest !</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet_please_register">Don\'t have an account yet? Please register</string>
    <string name="here">Here</string>
    <string name="register">Register</string>
    <string name="password_minimum_8_characters">Password minimum 8 characters</string>
    <string name="username">Username</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>