<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreyasans_regular"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black_grey_bold"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/pict"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegister"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/email"
            android:textColor="@color/black_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldEmailRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_radius"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textHelperEmailRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_is_not_valid"
            android:textColor="#FF0000"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:fontFamily="@font/alegreyasans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldEmailRegist" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/password"
            android:textColor="@color/black_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHelperEmailRegist" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPassRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_radius"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textHelperPassRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_minimum_8_characters"
            android:textColor="#FB0000"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:fontFamily="@font/alegreyasans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldPassRegist" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/username"
            android:textColor="@color/black_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHelperPassRegist" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldUsernameRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_radius"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:inputType="text"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textHelperUsernameRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_cannot_be_empty"
            android:textColor="#FF0000"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:fontFamily="@font/alegreyasans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldUsernameRegist" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:cornerRadius="10dp"
            app:backgroundTint="@color/purple"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/alegreyasans"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHelperUsernameRegist" />

        <TextView
            android:id="@+id/textViewToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/black_grey"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

        <TextView
            android:id="@+id/textViewHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/here"
            android:textColor="@color/purple"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewToLogin"
            app:layout_constraintStart_toEndOf="@+id/textViewToLogin"
            app:layout_constraintTop_toTopOf="@+id/textViewToLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>