<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreyasans_regular"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black_grey_bold"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/pict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreyasans_regular"
        android:text="@string/email"
        android:textColor="@color/black_grey"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_radius"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:inputType="text"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textHelperEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_is_not_valid"
        android:textColor="#FF0000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:fontFamily="@font/alegreyasans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmailLogin" />


    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreyasans_regular"
        android:text="@string/password"
        android:textColor="@color/black_grey"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHelperEmailLogin" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_radius"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:inputType="text"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textHelperPassLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_is_not_valid"
        android:textColor="#FF0000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:fontFamily="@font/alegreyasans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassLogin" />


    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreyasans_regular"
        android:text="Forgot Password?"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHelperPassLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Masuk"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/purple"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/alegreyasans"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgot" />

    <TextView
        android:id="@+id/textViewToRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/alegreyasans_regular"
        android:text="@string/don_t_have_an_account_yet_please_register"
        android:textColor="@color/black_grey"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textViewHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/here"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewToRegist"
        app:layout_constraintStart_toEndOf="@+id/textViewToRegist"
        app:layout_constraintTop_toTopOf="@+id/textViewToRegist" />
</androidx.constraintlayout.widget.ConstraintLayout>